--- a/source/DesignPatternDemos/DesignPatternDemos/DesignPatternDemos.csproj
+++ b/source/DesignPatternDemos/DesignPatternDemos/DesignPatternDemos.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-	<CodeAnalysisRuleSet>../../ca.ruleset</CodeAnalysisRuleSet>
+	<CodeAnalysisRuleSet>../../../ca.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
